force-app/main/default/objects/Account_Dups__c/Account_Dups__c.object-meta.xml
<CustomObject>
    <label>Duplicate Account</label>
    <nameField>
        <displayFormat>DUP ACC-{000000}</displayFormat>
        <label>Account Dups Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Dups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>