force-app/main/default/objects/Account_Dups__c/fields/Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Accounts_Dups1</relationshipName>
    <type>Lookup</type>
</CustomField>