force-app/main/default/objects/Account_Dups__c/fields/Master_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Dups (Master Account)</relationshipLabel>
    <relationshipName>Accounts_Dups</relationshipName>
    <type>Lookup</type>
</CustomField>