force-app/main/default/objects/Account_Dups__c/fields/Merge_Duplicate_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Merge_Duplicate_Record_Id__c</fullName>
    <label>Merge Duplicate Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>