force-app/main/default/objects/Account_Dups__c/fields/Number_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Opportunity__c</fullName>
    <label>Number of Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>