force-app/main/default/objects/Account_Dups__c/fields/Unique_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Account_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Unique Account Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>