force-app/main/default/objects/Account_Dups__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Master_Account__c</columns>
    <columns>Duplicate_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>